2009-12-05  higepon  <higepon@users.sourceforge.jp>

	* Removed Condition.cpp which isn't necessary no more.

	* include/monapi/Condition.h (MonAPI): Added Condition class implementation.

	* test/monapi/condition/condition.cpp (testCondition5): Added tests for Condition Class.

2009-12-02  higepon  <higepon@users.sourceforge.jp>

	* core/monapi/syscall.cpp: Fixed documents for conditions.

	* core/kernel/Scheduler.cpp : Passed tests for syscall_condtion_wait_timeout.(Green).

	* test/monapi/condition/condition.cpp : Added tests for syscall_condtion_wait_timeout. It fails now(Red).

2009-12-01  higepon  <higepon@users.sourceforge.jp>

	* core/monapi/syscall.cpp (syscall_mutex_lock): Fixed return value of mutex_lock.

2009-11-29  higepon  <higepon@users.sourceforge.jp>

	* Not to use Scheduler::SwitchToNext on any where, use only reasonable place.

2009-11-21  higepon  <higepon@users.sourceforge.jp>

	* core/scheme/lib/conf.scm.in : Added execution of stdio test.

	* tool/qemu/check_tests.scm: Added convinient make check feature. It runs qemu as daemon with no vga. check_tests.scm checks a log and print the result.

2009-11-18  higepon  <higepon@users.sourceforge.jp>

	* copied fat_write to file_server, since it used to be linked via svn:external.

	* Added .gitignore.

	* Migrated subversion to git thanks to id:mjt.

2009-11-14  higepon  <higepon@users.sourceforge.jp>

	* test/monalibc/stdio/test.cpp : Modified to use MUnit.

	* include/monapi/Mutex.h (MonAPI): Added document for Mutex class.

	* test/monapi/mutex/mutex.cpp (testClassMutex): Added test of Mutex class.

	* include/monapi/MUnit.h: Added simple unit test.

	* include/sys/error.h : Added some document.

2009-11-12  higepon  <higepon@users.sourceforge.jp>

	* test/monapi/mutex/mutex.cpp : Fixing bug on syscall_mutex_lock_timeout.

2009-11-11  higepon  <higepon@users.sourceforge.jp>

	* include/sys/error.h (enum): Added M_OK.

2009-11-04  higepon  <higepon@users.sourceforge.jp>
